--- a/README
+++ b/README
@@ -1,6 +1,5 @@
-.
 
-INTRO
+# INTRO
 
 The perl_tools repository is a collection of Perl based tools to help
 players and Game Masters (GMs, alternately DMs) generate Non-Player
@@ -81,10 +80,11 @@ whatever ship matches the "name".
   Plot: Tragedy 
 ```
 
-CODE REQUIREMENTS
+## CODE REQUIREMENTS
 
 The following Perl modules and other code are required:
 
+```
   Perl
   ====
   DBI
@@ -100,15 +100,14 @@ The following Perl modules and other code are required:
   Non Perl
   ========
   SQLite 3
+```
 
 
-BUILD STATUS
+## BUILD STATUS
 
-Builds are tracked on Travis-CI:
+Builds are tracked on [Travis-CI](https://travis-ci.org/makhidkarun/perl_tools/).
 
-  https://travis-ci.org/makhidkarun/perl_tools
-
-INSTALLATION
+## INSTALLATION
 
 To install this module, run the following commands:
 
@@ -117,7 +116,7 @@ To install this module, run the following commands:
 	./Build test
 	./Build install
 
-SUPPORT AND DOCUMENTATION
+## SUPPORT AND DOCUMENTATION
 
 After installing, you can find documentation for this module with the
 perldoc command.
@@ -139,9 +138,9 @@ You can also look for information at:
         https://metacpan.org/release/.
 
 
-LICENSE AND COPYRIGHT
+## LICENSE AND COPYRIGHT
 
-Copyright (C) 2018 Leam Hall
+Copyright (C) 2019 Leam Hall
 
 This program is distributed under the MIT (X11) License:
 L<http://www.opensource.org/licenses/mit-license.php>
